--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard Monitoreo Backups</title>
+<title>Metricas Backups</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -24,7 +24,7 @@ th,td{border-bottom:1px solid #1f2a3d;padding:6px;white-space:nowrap}
 </head>
 
 <body>
-<header>Dashboard – Monitoreo de Backups</header>
+<header>Monitoreo de Backups</header>
 
 <div class="container">
 
@@ -244,3 +244,4 @@ function renderTable(){
 </script>
 </body>
 </html>
+
