--- a/index.html
+++ b/index.html
@@ -25,11 +25,36 @@ canvas{max-height:260px}
 .kpi span{font-size:12px;color:#94a3b8}
 table{width:100%;border-collapse:collapse;font-family:Consolas;font-size:12px}
 th,td{border-bottom:1px solid #1f2a3d;padding:6px;white-space:nowrap}
+
+/* ===== ESTADO VISUAL DE FILAS (HISTÓRICO) ===== */
+tr.row-ok {
+  background-color: rgba(34,197,94,0.15);
+  color: #bbf7d0;
+}
+
+tr.row-warning {
+  background-color: rgba(234,179,8,0.20);
+  color: #fde68a;
+}
+
+tr.row-critical {
+  background-color: rgba(239,68,68,0.25);
+  color: #fecaca;
+  font-weight: 600;
+}
+
+tr.row-ok:hover,
+tr.row-warning:hover,
+tr.row-critical:hover {
+  filter: brightness(1.15);
+}
+
+
 </style>
 </head>
 
 <body>
-<header>Estadísticas Backups</header>
+<header>Monitoreo de Backups</header>
 
 <div class="container">
 
@@ -166,10 +191,34 @@ function renderCharts(){
 /* ========= TABLE ========= */
 function renderTable(){
   if(!data.length) return;
-  const h=Object.keys(data[0]);
-  csvHead.innerHTML='<tr>'+h.map(x=>`<th>${x}</th>`).join('')+'</tr>';
-  csvBody.innerHTML=data.map(r=>'<tr>'+h.map(k=>`<td>${r[k]}</td>`).join('')+'</tr>').join('');
+
+  const h = Object.keys(data[0]);
+
+  csvHead.innerHTML =
+    '<tr>' +
+      '<th>#</th>' +
+      h.map(x => `<th>${x}</th>`).join('') +
+    '</tr>';
+
+  csvBody.innerHTML = data.map((r, index) => {
+
+    const dias = Number(r.DiasSinCopia || 0);
+    const estado = (r.Estado || '').toUpperCase();
+
+    let rowClass = 'row-ok';
+    if (estado !== 'OK' || dias >= 3) rowClass = 'row-critical';
+    else if (dias === 1 || dias === 2) rowClass = 'row-warning';
+
+    return `
+      <tr class="${rowClass}">
+        <td>${index + 1}</td>
+        ${h.map(k => `<td>${r[k]}</td>`).join('')}
+      </tr>
+    `;
+  }).join('');
 }
+
+
 
 /* ========= PDF ========= */
 function exportPDF(){
